chore: Minor code cleanups